# pretty-history-for-claude-code

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml  setup.py
src/: claude_history.py
